--- a/resources/04_layout/solution/css/multi-row-with-navs.css
+++ b/resources/04_layout/solution/css/multi-row-with-navs.css
@@ -6,17 +6,18 @@ main, article, footer, img, nav {
 	color: white;
 	padding: 15px;
 	border: 3px solid grey;
+  margin: 2px;
 }
 
 header{
-	height: 75px;
+	height: 100px;
   padding: 15px;
 }
 
 img{
   float:left;
-  height: 50px;
-  width: 20%;
+  height: 70px;
+  width: 15%;
   background-color: red;
 }
 nav{
@@ -35,7 +36,7 @@ main{
 article{
 	height: 250px;
 	background-color: green;
-	width: 33.3%;
+	width: 33%;
  	float: left;
 }
 footer{
