adds lab resources and links

--- a/resources/04_layout/solution/css/multi-row-demo.css
+++ b/resources/04_layout/solution/css/multi-row-demo.css
@@ -21,8 +21,9 @@ section{
 article{
 	height: 250px;
 	background-color: green;
-	width: 33.3%;
+	width: 30%;
  	float: left;
+  margin: 1.5% ;
 }
 footer{
 	color:blue;
